--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@
 #grid {
     margin: 15px;
     display: grid;
-    grid-gap: 1px;
     grid-template-columns: repeat(3, 1fr);
 }
 
@@ -34,7 +33,15 @@ body{
     margin: auto;
     width: 520px;
     background-color: var(--c5);
-    height: 680px;
+    height: 780px;
+}
+
+#display{
+    text-align: center;
+    font-size: 45px;
+    margin-top: 10px;
+    padding: 12px 0px 12px 0px;
+    background-color: var(--c1);
 }
 
 #title{
